
add_library(imgui
    imconfig.h
    imgui.cpp
    imgui_demo.cpp
    imgui_draw.cpp
    imgui.h
    imgui_impl_opengl3.cpp
    imgui_impl_opengl3.h
    imgui_impl_glfw.cpp
    imgui_impl_glfw.h
    imgui_internal.h
    imgui_tables.cpp
    imgui_widgets.cpp
    imstb_rectpack.h
    imstb_textedit.h
    imstb_truetype.h
    imgui_stdlib.h
    imgui_stdlib.cpp
        imgui_ext.h imgui_ext.cpp)